--- a/src/README
+++ b/src/README
@@ -3,10 +3,10 @@ reel23.save.20191225 et reel30 et suivant :
 - ajout de LOG en tant que macro referencant gp_File_Flog (FILE*) dans astro.h
 - passage au type enum a certains endroits du code (plus pratique!!)
 - creation entete de la fonction au format doxygen des fonctions de calcul.c
-- regroupement des calculs dans une fonction CALCUL_TOUT
+- regroupement des calculs dans une fonction CALCULS_TOUT
 - simplification du code
 - programmation de la touche A/D (KEY_MODE) pour switcher azimutal / equatorial en une fois
 - correction BUG : il manquait semble-t-il le rafraichissement des calculs 
-  de temps dans suivi_voute (pour mode azimutal) TEMPS_CALCUL_TEMPS_SIDERAL
+  de temps dans suivi_voute (pour mode azimutal) TEMPS_CALCULS_TEMPS_SIDERAL
   
   
